--- a/djangodelights/inventory/templates/inventory/menu_list.html
+++ b/djangodelights/inventory/templates/inventory/menu_list.html
@@ -12,12 +12,15 @@
 	{% for menu_item in object_list %}
 		<li>
 			<div class="menu-item-header">
-				<div class="menu-item-title">{{ menu_item.title }}</div>
+				<div class="menu-item-title"><a href="{% url 'update_menu_item' menu_item.id %}">{{ menu_item.title }}</a></div>
 				<div class="menu-item-price">${{ menu_item.price|stringformat:".2f" }}</div>
 			</div>
 			<ul class="menu-item-ingredients">
 				{% for recipe_requirement in menu_item.reciperequirement_set.all %}
-				<li>{{ recipe_requirement.quantity }} {{recipe_requirement.ingredient.unit }} {{ recipe_requirement.ingredient.name }}</li>
+				<li>{{ recipe_requirement.quantity }} {{recipe_requirement.ingredient.unit }} {{ recipe_requirement.ingredient.name }}
+					<a href="{% url 'update_recipe_requirement' recipe_requirement.id %}">Edit</a>
+					<a href="{% url 'delete_recipe_requirement' recipe_requirement.id %}">Delete</a>
+				</li>
 				{% endfor %}
 			</ul>
 		</li>
